test/test-files/analyzer/methods/error-field-without-this/exception.out
Semantic error in : ./test-files/analyzer/methods/error-field-without-this/source.spice:13:18:
Referenced undefined variable: The symbol 'size' could not be found. Missing 'this.' prefix?

13  if (index <= size) { // size instead 
                 ^^^^